--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <h2>Modo Fácil</h2>
           <p>Adivina números en un rango progresivo</p>
           <p>Gana puntos según el intento en que aciertes</p>
-          <p class="texto-adicional">¡Perfecto1 para empezar y relajarte!</p>
+          <p class="texto-adicional">VAMOS A PONER A PRUEBA TU MEMORIA!</p>
           <button onclick="window.location.href='facil.html'">Jugar</button>
         </div>
 
@@ -193,3 +193,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
+
